; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5064.c_ad5064_set_powerdown_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5064.c_ad5064_set_powerdown_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i64 }
%struct.ad5064_state = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32)* @ad5064_set_powerdown_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad5064_set_powerdown_mode(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32 %2) #0 {
  %4 = alloca %struct.iio_dev*, align 8
  %5 = alloca %struct.iio_chan_spec*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ad5064_state*, align 8
  %8 = alloca i32, align 4
  store %struct.iio_dev* %0, %struct.iio_dev** %4, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.iio_dev*, %struct.iio_dev** %4, align 8
  %10 = call %struct.ad5064_state* @iio_priv(%struct.iio_dev* %9)
  store %struct.ad5064_state* %10, %struct.ad5064_state** %7, align 8
  %11 = load %struct.ad5064_state*, %struct.ad5064_state** %7, align 8
  %12 = getelementptr inbounds %struct.ad5064_state, %struct.ad5064_state* %11, i32 0, i32 1
  %13 = call i32 @mutex_lock(i32* %12)
  %14 = load i32, i32* %6, align 4
  %15 = add i32 %14, 1
  %16 = load %struct.ad5064_state*, %struct.ad5064_state** %7, align 8
  %17 = getelementptr inbounds %struct.ad5064_state, %struct.ad5064_state* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %5, align 8
  %20 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = getelementptr inbounds i32, i32* %18, i64 %21
  store i32 %15, i32* %22, align 4
  %23 = load %struct.ad5064_state*, %struct.ad5064_state** %7, align 8
  %24 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %5, align 8
  %25 = call i32 @ad5064_sync_powerdown_mode(%struct.ad5064_state* %23, %struct.iio_chan_spec* %24)
  store i32 %25, i32* %8, align 4
  %26 = load %struct.ad5064_state*, %struct.ad5064_state** %7, align 8
  %27 = getelementptr inbounds %struct.ad5064_state, %struct.ad5064_state* %26, i32 0, i32 1
  %28 = call i32 @mutex_unlock(i32* %27)
  %29 = load i32, i32* %8, align 4
  ret i32 %29
}

declare dso_local %struct.ad5064_state* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @ad5064_sync_powerdown_mode(%struct.ad5064_state*, %struct.iio_chan_spec*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
